--- a/about.html
+++ b/about.html
@@ -33,7 +33,7 @@
 
 <main>
 
-<p>Hi! I'm a web developer learning how to use GitHub Pages.</p>
+<p>Hi! My name is Thato Gaddafi Kookgale, I'm a year one student at Botswana Accountacy College doing my Bsc(Hons) in Applied Business computing.</p>
 
 <p>This is my multi-page website, and I'm excited to share it with you!</p>
 
