--- a/contact.html
+++ b/contact.html
@@ -34,7 +34,7 @@
 
 <main>
 
-<p>If you'd like to get in touch, feel free to email me at <a href="mailto:example@example.com">example@example.com</a>.</p>
+<p>If you'd like to get in touch, feel free to email me at <a href="https://accounts.google.com/b/0/AddMailService">kookgalethato@gmail.com</a>.</p>
 
 </main>
 
