--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 <p>This is a simple webpage hosted on GitHub Pages.</p>
 
 <p>Here's a picture of myself:</p>
-<img src="https://scontent-jnb2-1.xx.fbcdn.net/v/t39.30808-6/448277121_1408783727182945_487515374121489343_n.jpg?stp=c0.232.576.576a_dst-jpg_s206x206_tt6&_nc_cat=109&ccb=1-7&_nc_sid=7a06f5&_nc_eui2=AeF5HzmbPF6LTIfg0Kvskcjgx2V97AzX6e7HZX3sDNfp7j-nc_S1750CAIEUZJONNB_kxMNE9GUL_8u4Ttpp6UkE&_nc_ohc=HFgvAXbx_e4Q7kNvgGSj_kw&_nc_oc=Adg1jYtMeYpHGh7iG8NFP8B-F_LUuuY6C5b42YWW-l-z_MTWxSguuixE_NAxciUZwQI&_nc_zt=23&_nc_ht=scontent-jnb2-1.xx&_nc_gid=AxgsELHO9KGKgdobcZGv3h-&oh=00_AYAmC20fu5bETFBW1ei6DhSlAb2mvIelGaHEYI-SH2bvPg&oe=67C39029">
+<img src="https://www.google.com/imgres?q=thato%20gaddafi%20kookgale&imgurl=https%3A%2F%2Flookaside.fbsbx.com%2Flookaside%2Fcrawler%2Fmedia%2F%3Fmedia_id%3D100041539937831&imgrefurl=https%3A%2F%2Fwww.facebook.com%2Fphoto.php%3Ffbid%3D896783358472783%26id%3D100044233819240%26set%3Da.604450681039387%26locale%3Dfr_CA&docid=No6LCGDl5Ug5KM&tbnid=g3d3zDxqvfd0JM&vet=12ahUKEwj41t_DwOuLAxXhXEEAHTtWA_QQM3oECGYQAA..i&w=576&h=1280&hcb=2&itg=1&ved=2ahUKEwj41t_DwOuLAxXhXEEAHTtWA_QQM3oECGYQAA">
 
 
 <p>Visit <a href="https://github.com">GitHub</a> to learn more about coding.</p>
