--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 <p>This is a simple webpage hosted on GitHub Pages.</p>
 
 <p>Here's a picture of myself:</p>
-<img src="https://www.google.com/imgres?q=thato%20gaddafi%20kookgale&imgurl=https%3A%2F%2Flookaside.fbsbx.com%2Flookaside%2Fcrawler%2Fmedia%2F%3Fmedia_id%3D100041539937831&imgrefurl=https%3A%2F%2Fwww.facebook.com%2Fphoto.php%3Ffbid%3D896783358472783%26id%3D100044233819240%26set%3Da.604450681039387%26locale%3Dfr_CA&docid=No6LCGDl5Ug5KM&tbnid=g3d3zDxqvfd0JM&vet=12ahUKEwj41t_DwOuLAxXhXEEAHTtWA_QQM3oECGYQAA..i&w=576&h=1280&hcb=2&itg=1&ved=2ahUKEwj41t_DwOuLAxXhXEEAHTtWA_QQM3oECGYQAA">
+<img src="https://www.google.com/imgres?q=chill%20guy&imgurl=https%3A%2F%2Flookaside.instagram.com%2Fseo%2Fgoogle_widget%2Fcrawler%2F%3Fmedia_id%3D3206255795908747425&imgrefurl=https%3A%2F%2Fwww.instagram.com%2Fphilbbankss%2Fp%2FCx9pJOVgYvj%2F&docid=tvd20O7LR35okM&tbnid=rKaM31xqqI3VnM&vet=12ahUKEwjr79mxxeuLAxUVWkEAHSJzAE4QM3oECBoQAA..i&w=540&h=960&hcb=2&ved=2ahUKEwjr79mxxeuLAxUVWkEAHSJzAE4QM3oECBoQAA">
 
 
 <p>Visit <a href="https://github.com">GitHub</a> to learn more about coding.</p>
