--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 <p>This is a simple webpage hosted on GitHub Pages.</p>
 
 <p>Here's a picture of myself:</p>
-<img src="https://www.google.com/imgres?q=chill%20guy&imgurl=https%3A%2F%2Flookaside.instagram.com%2Fseo%2Fgoogle_widget%2Fcrawler%2F%3Fmedia_id%3D3206255795908747425&imgrefurl=https%3A%2F%2Fwww.instagram.com%2Fphilbbankss%2Fp%2FCx9pJOVgYvj%2F&docid=tvd20O7LR35okM&tbnid=rKaM31xqqI3VnM&vet=12ahUKEwjr79mxxeuLAxUVWkEAHSJzAE4QM3oECBoQAA..i&w=540&h=960&hcb=2&ved=2ahUKEwjr79mxxeuLAxUVWkEAHSJzAE4QM3oECBoQAA">
+<img src="https://www.google.com/imgres?q=chill%20guy&imgurl=https%3A%2F%2Fi1.sndcdn.com%2Fartworks-kBaZIJ1p1akvBf4v-HMNn2g-t500x500.jpg&imgrefurl=https%3A%2F%2Fsoundcloud.com%2Fdaviddavis-437802076%2Fchill-guy-orchestral-version&docid=634IwhE15ykUoM&tbnid=8Z9MIS_NJNe3pM&vet=12ahUKEwjr79mxxeuLAxUVWkEAHSJzAE4QM3oECB0QAA..i&w=500&h=500&hcb=2&ved=2ahUKEwjr79mxxeuLAxUVWkEAHSJzAE4QM3oECB0QAA">
 
 
 <p>Visit <a href="https://github.com">GitHub</a> to learn more about coding.</p>
