--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 <p>This is a simple webpage hosted on GitHub Pages.</p>
 
 <p>Here's a picture of myself:</p>
-<img src="https://www.facebook.com/photo.php?fbid=1517961336265183&set=pb.100041539937831.-2207520000&type=3">
+<img src="20230729_100049.jpg">
 
 
 <p>Visit <a href="https://github.com">GitHub</a> to learn more about coding.</p>
