--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 <p>This is a simple webpage hosted on GitHub Pages.</p>
 
 <p>Here's a picture of myself:</p>
-<img src="https://www.facebook.com/photo.php?fbid=1408783750516276&set=pb.100041539937831.-2207520000&type=3">
+<img src="https://photos.google.com/photo/AF1QipNwjC3yc3BGfq99TcIiR3c6oCB7ca9EoSBsz2hK">
 
 
 <p>Visit <a href="https://github.com">GitHub</a> to learn more about coding.</p>
