--- a/about.html
+++ b/about.html
@@ -34,7 +34,7 @@
 
 <main>
 
-<p>Hi! My name is Thato Gaddafi Kookgale, I'm a year one student at Botswana Accountacy College doing my Bsc(Hons) in Applied Business computing.</p>
+<p>Hi! My name is Thato Gaddafi Kookgale, I am 19 years old. I'm a year one student at Botswana Accountacy College doing my Bsc(Hons) in Applied Business computing.</p>
 
 <p>This is my multi-page website, and I'm excited to share it with you!</p>
 
