--- a/index.html
+++ b/index.html
@@ -35,9 +35,7 @@
 <p>This is a simple webpage hosted on GitHub Pages.</p>
 
 <p>Here are a few pictures of myself:</p>
-<img src="https://https://www.google.com/imgres?q=cool%20boy%20animae&imgurl=https%3A%2F%2Fimages.saatchiart.com%2Fsaatchi%2F1755977%2Fart%2F8291898%2F7356904-HSC00002-7.jpg&imgrefurl=https%3A%2F%2Fwww.saatchiart.com%2Fart%2FPainting-Anime-Photo-Of-Cool-Boy%2F1755977%2F8291898%2Fview&docid=9YN4TY5-VxtVqM&tbnid=7xJ7S7zPAoIrFM&vet=12ahUKEwjMw-3dxfCLAxVDU0EAHV6FALYQM3oECBoQAA..i&w=770&h=770&hcb=2&ved=2ahUKEwjMw-3dxfCLAxVDU0EAHV6FALYQM3oECBoQAA">
-  <img src="https://www.facebook.com/photo.php?fbid=1527799471948036&set=pb.100041539937831.-2207520000&type=3">
-    <img src="https://www.facebook.com/photo.php?fbid=1408783750516276&set=pb.100041539937831.-2207520000&type=3">
+<img src="
 
 
 <p>Visit <a href="https://github.com">GitHub</a> to learn more about coding.</p>
