--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
 
 <p>Here are a few pictures of myself:</p>
 <img src="https://www.facebook.com/photo.php?fbid=1330072111720774&set=pb.100041539937831.-2207520000&type=3">
-
-
+<img src="https://www.facebook.com/photo.php?fbid=1408783750516276&set=pb.100041539937831.-2207520000&type=3">
+<img src="https://www.facebook.com/photo.php?fbid=1517961336265183&set=pb.100041539937831.-2207520000&type=3">
 <p>Visit <a href="https://github.com">GitHub</a> to learn more about coding.</p>
 
 </main>
