--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 <p>This is a simple webpage hosted on GitHub Pages.</p>
 
 <p>Here are a few pictures of myself:</p>
-<img src="https://www.facebook.com/photo.php?fbid=1330072111720774&set=pb.100041539937831.-2207520000&type=3">
+<img src="https://scontent-jnb2-1.xx.fbcdn.net/v/t39.30808-6/480689329_1625642418830407_1671163234635065318_n.jpg?_nc_cat=110&ccb=1-7&_nc_sid=833d8c&_nc_eui2=AeHZgibOiOe6EUPYhmvotb8Bi1EaKgWEfAeLURoqBYR8B-OjJt8oXHAUS-y6wBAauXSMkrJTczG6UK1z3Q2gaTxI&_nc_ohc=zpSXPSb7emwQ7kNvgH604ND&_nc_oc=Adh-xRESqJIRFxtC_0YCxnDnAJpVEgad6n8JJK2o2f-LYhyqqNFRoZKa14oEcZgYpU8&_nc_zt=23&_nc_ht=scontent-jnb2-1.xx&_nc_gid=AlR2afZoZBXHYbblLtNOjdJ&oh=00_AYBQmRp9vgoVMbYdQh5aQgLXFQvBMvZHU3fC6Ia1rtyj-w&oe=67CCF0D0">
 <img src="https://www.facebook.com/photo.php?fbid=1408783750516276&set=pb.100041539937831.-2207520000&type=3">
 <img src="https://www.facebook.com/photo.php?fbid=1517961336265183&set=pb.100041539937831.-2207520000&type=3">
   
