--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
 
 <p>Here are a few pictures of myself:</p>
 <img src="https://scontent-jnb2-1.xx.fbcdn.net/v/t39.30808-6/480689329_1625642418830407_1671163234635065318_n.jpg?_nc_cat=110&ccb=1-7&_nc_sid=833d8c&_nc_eui2=AeHZgibOiOe6EUPYhmvotb8Bi1EaKgWEfAeLURoqBYR8B-OjJt8oXHAUS-y6wBAauXSMkrJTczG6UK1z3Q2gaTxI&_nc_ohc=zpSXPSb7emwQ7kNvgH604ND&_nc_oc=Adh-xRESqJIRFxtC_0YCxnDnAJpVEgad6n8JJK2o2f-LYhyqqNFRoZKa14oEcZgYpU8&_nc_zt=23&_nc_ht=scontent-jnb2-1.xx&_nc_gid=AlR2afZoZBXHYbblLtNOjdJ&oh=00_AYBQmRp9vgoVMbYdQh5aQgLXFQvBMvZHU3fC6Ia1rtyj-w&oe=67CCF0D0">
-<img src="https://www.facebook.com/photo.php?fbid=1408783750516276&set=pb.100041539937831.-2207520000&type=3">
-<img src="https://www.facebook.com/photo.php?fbid=1517961336265183&set=pb.100041539937831.-2207520000&type=3">
+<img src="https://scontent-jnb2-1.xx.fbcdn.net/v/t39.30808-6/481085190_1633669508027698_4698146102733808768_n.jpg?_nc_cat=105&ccb=1-7&_nc_sid=833d8c&_nc_eui2=AeGgMF47VfED47Gna9PKAsrEBeNHxm0PAHwF40fGbQ8AfO5FWepZDG5Ub7Yw2xkuot1mWJUOgJExjjixGATbfJXX&_nc_ohc=xghBJxTHFswQ7kNvgE1EK47&_nc_oc=AdhcXU3b_EQTWtSJmpycS9_1sFrM1nqvTbsbk7BkfYybkH619EJ7EBQ3bJWwHuRPrUc&_nc_zt=23&_nc_ht=scontent-jnb2-1.xx&_nc_gid=ANMZLfvfvm7TyNiMYL-rSJX&oh=00_AYDgaIKAP37Sf5XJ-kg4dulyJCQsHUEqKOukcIz9lBggcQ&oe=67CCBE54">
+<img src="https://scontent-jnb2-1.xx.fbcdn.net/v/t39.30808-6/481038437_1633779571350025_7260216896289255730_n.jpg?_nc_cat=102&ccb=1-7&_nc_sid=833d8c&_nc_eui2=AeHavf3yc71QZbxk5RT2GKWJ9NAv01rLUbP00C_TWstRs9p605SUei2OgviqvgmMP35iQh9_ZDgvNS3bSEsDTcPN&_nc_ohc=r62y2nKtNWsQ7kNvgGyRwTS&_nc_oc=AdiMh6qJc_h7OKY-FoW4pnDRcgRrmcw5P470BIiPUT8pI9Dh3cbWKMoPdakWQvaUT98&_nc_zt=23&_nc_ht=scontent-jnb2-1.xx&_nc_gid=ASZtpBwhgiPrrpC_4r27xn0&oh=00_AYAlcfwGYvZ7OLTzWRZJI_dwDKgT7SQcRTe0klWIZmxw5A&oe=67CCCFA1">
   
 <p>Visit <a href="https://github.com">GitHub</a> to learn more about coding.</p>
 
