--- a/index.html
+++ b/index.html
@@ -24,6 +24,10 @@
 
 <a href="about.html">About</a> |
 
+<a href="family.html">Family</a>  
+
+<a href="likes and dislikes.html">Likes and Dislikes</a>    
+
 <a href="contact.html">Contact</a>
 
 </nav>
