--- a/about.html
+++ b/about.html
@@ -25,10 +25,13 @@
 
 <a href="about.html">About</a> |
 
+<a href="family.html">Family</a>  
+
+<a href="likes and dislikes.html">Likes and Dislikes</a>    
+
 <a href="contact.html">Contact</a>
 
 </nav>
-
 </header>
 
 
