--- a/family.html
+++ b/family.html
@@ -8,7 +8,7 @@
 
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<title>My Page</title>
+<title>About Me</title>
   <link rel="stylesheet" href="styles.css">
 
 </head>
@@ -16,3 +16,20 @@
 <body>
 
 <header>
+
+<h1>family</h1>
+
+<nav>
+
+<a href="index.html">Home</a> |
+
+<a href="about.html">About</a> |
+
+<a href="family.html">Family</a>  
+
+<a href="likes and dislikes.html">Likes and Dislikes</a>    
+
+<a href="famil.html">Contact</a>
+
+</nav>
+</header>
