--- a/contact.html
+++ b/contact.html
@@ -39,6 +39,8 @@
 
 <p>If you'd like to get in touch, feel free to email me at <a href="https://kookgalethato@gmail.com">kookgalethato@gmail.com</a>.</p>
 
+<p>Or kindly give me a call at +267 76 260 739</p>  
+
 </main>
 
 
