--- a/family.html
+++ b/family.html
@@ -29,7 +29,15 @@
 
 <a href="likes and dislikes.html">Likes and Dislikes</a>    
 
-<a href="famil.html">Contact</a>
+<a href="Family.html">Contact</a>
 
 </nav>
 </header>
+
+ </nav>
+</header>
+
+
+<main>
+
+<p> My family is a small family which includes my mother and little brother>
