--- a/family.html
+++ b/family.html
@@ -40,4 +40,4 @@
 
 <main>
 
-<p> My family is a small family which includes my mother and little brother>
+<p> My family is a small family which includes my mother and little brother<p>
