--- a/family.html
+++ b/family.html
@@ -8,7 +8,7 @@
 
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<title>About Me</title>
+<title>Family</title>
   <link rel="stylesheet" href="styles.css">
 
 </head>
@@ -17,7 +17,7 @@
 
 <header>
 
-<h1>family</h1>
+<h1>Family</h1>
 
 <nav>
 
@@ -29,15 +29,27 @@
 
 <a href="likes and dislikes.html">Likes and Dislikes</a>    
 
-<a href="Family.html">Contact</a>
+<a href="contact.html">Contact</a>
 
 </nav>
-</header>
-
- </nav>
 </header>
 
 
 <main>
 
-<p> My family is a small family which includes my mother and little brother<p>
+<p>I have a small family of jus 2 members and me as the third member. My family members consist of my mother Mosetsana Kookgale and my little brother David Kookgale.</p>
+
+<p>This is my multi-page website, and I'm excited to share it with you!</p>
+
+</main>
+
+
+<footer>
+
+<p>&copy; 2025 Thato Gaddafi Kookgale</p>
+
+</footer>
+
+</body>
+
+</html>
