Update likes and dislikes.html

--- a/likes and dislikes.html
+++ b/likes and dislikes.html
@@ -17,7 +17,7 @@
 
 <header>
 
-<h1>Likes And Dislikes</h1>
+<h1>About Me</h1>
 
 <nav>
 
@@ -29,7 +29,31 @@
 
 <a href="likes and dislikes.html">Likes and Dislikes</a>    
 
-<a href="likes and dislikes.html">Contact</a>
+<a href="contact.html">Contact</a>
 
 </nav>
 </header>
+
+
+<main>
+
+<p>Just like anyone else I have my likes and dislikes.</p>
+
+ <p>My likes include playing video games, watching football, karate, listening to music, spending time with the ones I love.<p>
+
+  <p>My dislikes include being in crowded places, being disturb when am having my own peace of mind and I also hate cats.<p>
+    
+<p>This is my multi-page website, and I'm excited to share it with you!</p>
+
+</main>
+
+
+<footer>
+
+<p>&copy; 2025 Thato Gaddafi Kookgale</p>
+
+</footer>
+
+</body>
+
+</html>
